Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -152,6 +152,43 @@
       </div>
     </section>
 
+<!-- ⬇️ COLAR ESTE BLOCO APÓS O <section class="hero"...> e ANTES da seção "credibility" -->
+<section class="pains section--tight" id="dores">
+  <div class="container">
+    <div class="section__header">
+      <h2 class="section__title">O que normalmente trava o crescimento</h2>
+      <p class="section__subtitle">Se alguma dessas frases parece com sua realidade, vamos destravar com automação e um plano simples.</p>
+    </div>
+
+    <div class="pains__grid">
+      <button class="pain-card" onclick="location.href='#diagnostico'">
+        <span class="pain-card__icon" aria-hidden="true">↘️</span>
+        <span class="pain-card__text">Fatura entra, mas a margem some no caminho.</span>
+      </button>
+
+      <button class="pain-card" onclick="location.href='#diagnostico'">
+        <span class="pain-card__icon" aria-hidden="true">🧩</span>
+        <span class="pain-card__text">Prioridades mudam toda semana, nada vira rotina.</span>
+      </button>
+
+      <button class="pain-card" onclick="location.href='#diagnostico'">
+        <span class="pain-card__icon" aria-hidden="true">👥</span>
+        <span class="pain-card__text">Time desalinhado, decisões reativas e urgentes.</span>
+      </button>
+
+      <button class="pain-card" onclick="location.href='#diagnostico'">
+        <span class="pain-card__icon" aria-hidden="true">🔥</span>
+        <span class="pain-card__text">Dia vira plantão: apagar incêndio em vez de executar plano.</span>
+      </button>
+    </div>
+
+    <div class="pains__cta">
+      <a href="#diagnostico" class="btn btn--primary btn--large">Fazer diagnóstico em 60s</a>
+      <a href="aistudio.html" class="btn btn--outline btn--large">Entender nossa camada de IA</a>
+    </div>
+  </div>
+</section>
+
     <!-- CREDIBILIDADE -->
     <section class="credibility" id="cred">
       <div class="container">
@@ -276,7 +313,38 @@
         </div>
       </div>
     </section>
+<!-- ⬇️ COLAR ESTE BLOCO ENTRE a seção "credibility" e a grade .services__grid -->
+<section class="how-cards" id="como-funciona-cards">
+  <div class="container">
+    <div class="section__header">
+      <h2 class="section__title">Como a Tullu executa</h2>
+      <p class="section__subtitle">Resumo rápido do fluxo completo — do diagnóstico à operação previsível.</p>
+    </div>
 
+    <div class="how-cards__grid">
+      <div class="how-card">
+        <div class="how-card__number">1</div>
+        <h3 class="how-card__title">Diagnóstico</h3>
+        <p class="how-card__text">Identificamos o gargalo certo. Sem suposições, com dados.</p>
+        <a href="#diagnostico" class="btn btn--secondary">Rodar agora</a>
+      </div>
+
+      <div class="how-card">
+        <div class="how-card__number">2</div>
+        <h3 class="how-card__title">Implantação</h3>
+        <p class="how-card__text">Instalamos a camada de automação e conectamos seus canais.</p>
+        <a href="weblab.html" class="btn btn--secondary">Site pronto para captar</a>
+      </div>
+
+      <div class="how-card">
+        <div class="how-card__number">3</div>
+        <h3 class="how-card__title">Otimização contínua</h3>
+        <p class="how-card__text">Melhoria com base em métricas, não em opinião.</p>
+        <a href="aistudio.html" class="btn btn--secondary">Ver IA em ação</a>
+      </div>
+    </div>
+  </div>
+</section>
     <!-- SERVIÇOS -->
     <section class="services" id="servicos">
       <div class="container">
@@ -340,7 +408,89 @@
         </div>
       </div>
     </section>
+<!-- ⬇️ COLAR ESTE BLOCO LOGO APÓS a grade .services__grid (seção de serviços/cards atuais) -->
+<section class="value-cards" id="o-que-voce-recebe">
+  <div class="container">
+    <div class="section__header">
+      <h2 class="section__title">O que você recebe na prática</h2>
+      <p class="section__subtitle">Entregáveis claros. Nada nebuloso.</p>
+    </div>
 
+    <div class="value-cards__grid">
+      <div class="value-card">
+        <span class="value-card__tick">✔</span>
+        <h3 class="value-card__title">Painel em tempo real</h3>
+        <p class="value-card__text">Agendamentos, conversas e resultados num só lugar.</p>
+      </div>
+
+      <div class="value-card">
+        <span class="value-card__tick">✔</span>
+        <h3 class="value-card__title">Integrações essenciais</h3>
+        <p class="value-card__text">WhatsApp, CRM, planilhas e sistemas que já usa.</p>
+      </div>
+
+      <div class="value-card">
+        <span class="value-card__tick">✔</span>
+        <h3 class="value-card__title">Relatórios executivos</h3>
+        <p class="value-card__text">Prioridades semanais e próximos passos sem ruído.</p>
+      </div>
+
+      <div class="value-card">
+        <span class="value-card__tick">✔</span>
+        <h3 class="value-card__title">Playbooks de automação</h3>
+        <p class="value-card__text">Fluxos prontos para atendimento, agendamento e follow-up.</p>
+      </div>
+
+      <div class="value-card">
+        <span class="value-card__tick">✔</span>
+        <h3 class="value-card__title">Suporte de implantação</h3>
+        <p class="value-card__text">Acompanhamento até rodar liso no seu ambiente.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- ⬇️ COLAR ESTE BLOCO ANTES da seção "cases" -->
+<section class="fit-section" id="pra-quem-e">
+  <div class="container">
+    <div class="section__header">
+      <h2 class="section__title">É para você que quer…</h2>
+    </div>
+
+    <div class="fit-grid">
+      <div class="fit-item">
+        <span class="fit-item__icon">📈</span>
+        <h3 class="fit-item__title">Crescer com previsibilidade</h3>
+        <p class="fit-item__text">Receita com margem saudável e menos dependência de “heróis”.</p>
+      </div>
+      <div class="fit-item">
+        <span class="fit-item__icon">🎯</span>
+        <h3 class="fit-item__title">Priorizar com clareza</h3>
+        <p class="fit-item__text">Impacto × esforço como bússola de execução.</p>
+      </div>
+      <div class="fit-item">
+        <span class="fit-item__icon">🤝</span>
+        <h3 class="fit-item__title">Alinhar liderança</h3>
+        <p class="fit-item__text">Plano único que reduz retrabalho e reunião improdutiva.</p>
+      </div>
+      <div class="fit-item">
+        <span class="fit-item__icon">⚙️</span>
+        <h3 class="fit-item__title">Disciplinar a operação</h3>
+        <p class="fit-item__text">Processos vivos, medidos e que evoluem toda semana.</p>
+      </div>
+      <div class="fit-item">
+        <span class="fit-item__icon">🤖</span>
+        <h3 class="fit-item__title">Automatizar o atendimento</h3>
+        <p class="fit-item__text">WhatsApp 24h sem aumentar equipe.</p>
+      </div>
+      <div class="fit-item">
+        <span class="fit-item__icon">🧪</span>
+        <h3 class="fit-item__title">Testar rápido com IA</h3>
+        <p class="fit-item__text">Provas reais antes de escalar soluções.</p>
+      </div>
+    </div>
+  </div>
+</section>
     <!-- COMO FUNCIONA -->
     <section class="process" id="como-funciona">
       <div class="container">
@@ -359,7 +509,70 @@
         </div>
       </div>
     </section>
+<!-- ⬇️ COLAR ESTE BLOCO ENTRE a seção "cases" e a seção "cta-final" -->
+<section class="plans" id="planos">
+  <div class="container">
+    <div class="section__header">
+      <h2 class="section__title">Níveis de suporte</h2>
+      <p class="section__subtitle">Escolha o ponto de partida. Cresce junto com você.</p>
+    </div>
 
+    <div class="plans__grid">
+      <!-- Starter -->
+      <div class="plan-card">
+        <div class="plan-card__head">
+          <h3 class="plan-card__name">Starter</h3>
+          <p class="plan-card__tagline">Base para captar e organizar</p>
+        </div>
+        <ul class="plan-card__bullets">
+          <li>Site inteligente (WebLab)</li>
+          <li>Coleta de leads e dados</li>
+          <li>Integração WhatsApp básica</li>
+        </ul>
+        <div class="plan-card__cta">
+          <a href="weblab.html" class="btn btn--secondary">Criar meu site</a>
+        </div>
+      </div>
+
+      <!-- Pro -->
+      <div class="plan-card plan-card--featured">
+        <div class="plan-card__head">
+          <h3 class="plan-card__name">Pro</h3>
+          <p class="plan-card__tagline">Automação que gera resultado</p>
+        </div>
+        <ul class="plan-card__bullets">
+          <li>Agente de IA para atendimento e agendamento</li>
+          <li>Painel em tempo real + relatórios</li>
+          <li>Integrações com CRM/planilhas</li>
+        </ul>
+        <div class="plan-card__cta">
+          <a href="aistudio.html" class="btn btn--accent btn--large">Escolher este</a>
+        </div>
+      </div>
+
+      <!-- Scale -->
+      <div class="plan-card">
+        <div class="plan-card__head">
+          <h3 class="plan-card__name">Scale</h3>
+          <p class="plan-card__tagline">Operação previsível end-to-end</p>
+        </div>
+        <ul class="plan-card__bullets">
+          <li>IA + consultoria operacional (Cobra)</li>
+          <li>Backlog priorizado (90 dias)</li>
+          <li>Rotinas e playbooks sob medida</li>
+        </ul>
+        <div class="plan-card__cta">
+          <a href="aistudio.html#contato" class="btn btn--secondary">Falar com especialista</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="plans__foot-cta">
+      <a href="#diagnostico" class="btn btn--primary btn--large">Fazer diagnóstico em 60s</a>
+      <a href="aistudio.html" class="btn btn--outline btn--large">Ver detalhes do AI Studio</a>
+    </div>
+  </div>
+</section>
     <!-- CTA FINAL -->
     <section class="cta-final" id="cta">
       <div class="cta-final__bg"></div>
@@ -375,7 +588,28 @@
     </section>
 
   </main>
+<!-- ⬇️ COLAR PERTO DO FIM DO BODY, ANTES DO FOOTER OU LOGO APÓS ELE (fica visível no mobile) -->
+<div class="sticky-cta" id="sticky-cta" hidden>
+  <div class="sticky-cta__inner">
+    <button class="sticky-cta__close" aria-label="Fechar" onclick="document.getElementById('sticky-cta').setAttribute('hidden','')">×</button>
+    <a href="aistudio.html" class="btn btn--primary">Ver agente em ação</a>
+    <a href="#diagnostico" class="btn btn--outline">Diagnóstico 60s</a>
+  </div>
+</div>
 
+<script>
+  // Exibe a barra após ~30% de scroll e esconde no topo
+  (function(){
+    const el = document.getElementById('sticky-cta');
+    if(!el) return;
+    const onScroll = () => {
+      const p = (window.scrollY || document.documentElement.scrollTop) / (document.body.scrollHeight - window.innerHeight);
+      if (p > 0.30) { el.removeAttribute('hidden'); } else { el.setAttribute('hidden',''); }
+    };
+    window.addEventListener('scroll', onScroll, { passive: true });
+    onScroll();
+  })();
+</script>
   <footer class="footer">
     <div class="container">
       <div class="footer__content">
