--- a/index.html
+++ b/index.html
@@ -64,15 +64,16 @@
 
       <div class="container">
         <div class="hero__content">
-          <p class="hero__tagline">Chega de perder vendas por falha no atendimento</p>
+          <p class="hero__tagline">O MOTOR DIGITAL QUE MOVE SUA EMPRESA</p>
           <h1 class="hero__title">
             Instalamos <span class="gradient-text">inteligência real</span> no seu negócio
           </h1>
           <p class="hero__subtitle">
-            Agentes de IA que automatizam atendimento, agendamento e follow-up, funcionando 24h por dia dentro do seu WhatsApp.
+            Sites que convertem + atendimento inteligente + follow-up automático.
+            Seu negócio escala sem mais gente, sem mais esforço.
           </p>
           <div class="hero__cta">
-            <a href="https://wa.me/5511959029428?text=Ol%C3%A1!%20Quero%20ver%20como%20a%20Tullu%20pode%20automatizar%20meu%20atendimento." class="btn btn--primary btn--large" target="_blank">Ver agente em ação</a>
+            <a href="https://wa.me/5511959029428?text=Ol%C3%A1!%20Quero%20ver%20como%20a%20Tullu%20pode%20automatizar%20meu%20atendimento." class="btn btn--primary btn--large" target="_blank">Começar a escalar hoje</a>
             <a href="#como-funciona" class="btn btn--outline btn--large">Entender como funciona</a>
           </div>
         </div>
@@ -96,7 +97,7 @@
         </header>
 
         <!-- Vídeo MP4 local (assets/img) -->
-        <div class="demo__video" role="region" aria-label="Demonstração do agente e CRM">
+        <div class="demo__video" id="video" role="region" aria-label="Demonstração do agente e CRM">
           <video
             class="demo__video-el"
             controls
@@ -112,45 +113,23 @@
         <div class="demo__cta">
           <!-- CTA destacado com cor diferente (btn--accent) --><br><br>
           <a href="#diagnostico" class="btn btn--accent btn--large">Quero testar GRÁTIS!</a>
-          <small class="demo__note">É só plugar o WhatsApp!</small><br>
+          <small class="demo__note">Atende até<strong>3.000 leads simultaneamente</strong></small><br>
           <div class="demo__subtags">
             <span class="tag">Atendimento 24/7</span>
             <span class="tag">Agendamento automático</span>
             <span class="tag">Dashboard de CRM</span>
           </div>
         </div>
-
+<br><br><br>
         <div class="demo__footnote">
           <p class="section__subtitle">
             Isso é o carro-chefe. Mas não é tudo: integramos site, tráfego pago, automações operacionais e experiências interativas para fechar o ciclo de aquisição → atendimento → conversão.
-          </p>
+          </p><br><br>
         </div>
       </div>
     </section>
 
-    <!-- SHOWCASE — PRINT DO PAINEL / WHITE LABEL -->
-    <section id="showcase" class="showcase">
-      <div class="container">
-        <header class="section__header">
-          <h2 class="section__title">Veja o painel em tempo real</h2>
-          <p class="section__subtitle">
-            Visualize agendamentos, conversas, status e resultados em um só lugar. Sem atrito, sem planilhas soltas.
-          </p> <br>
-          <div class="tag tag--ai">Custa <strong>menos</strong> que um jovem aprendiz!</div>
-        </header>
-
-        <figure class="showcase__frame">
-          <!-- troque a imagem abaixo pelo print do seu White Label -->
-          <img src="assets/img/print-whitelabel.png" alt="Print do painel de CRM e agente em funcionamento" class="showcase__img"/>
-          <figcaption class="sr-only">Exemplo do painel com agendamentos e conversas integradas ao WhatsApp</figcaption>
-        </figure>
-
-        <div class="showcase__cta">
-          <a href="#diagnostico" class="btn btn--accent btn--large">Quero testar gratuitamente</a>
-          <small class="demo__note">É só plugar o WhatsApp!</small>
-        </div>
-      </div>
-    </section>
+  
 
 <!-- ⬇️ COLAR ESTE BLOCO APÓS O <section class="hero"...> e ANTES da seção "credibility" -->
 <section class="pains section--tight" id="dores">
@@ -317,30 +296,31 @@
 <section class="how-cards" id="como-funciona-cards">
   <div class="container">
     <div class="section__header">
-      <h2 class="section__title">Como a Tullu executa</h2>
-      <p class="section__subtitle">Resumo rápido do fluxo completo — do diagnóstico à operação previsível.</p>
+      <h2 class="section__title">Como a Tullu trabalha por você?</h2>
+     <!-- <p class="section__subtitle">Resumo rápido do fluxo completo — do diagnóstico à operação previsível.</p> -->
     </div>
-
+<br>
     <div class="how-cards__grid">
       <div class="how-card">
-        <div class="how-card__number">1</div>
-        <h3 class="how-card__title">Diagnóstico</h3>
-        <p class="how-card__text">Identificamos o gargalo certo. Sem suposições, com dados.</p>
-        <a href="#diagnostico" class="btn btn--secondary">Rodar agora</a>
+        <div class="how-card__number">1</div><br>
+        <h3 class="how-card__title">Atendimento que converte</h3>
+        <p class="how-card__text">Seu WhatsApp responde, entende e agenda sozinho - 24h.</p>
+        <a href="#video" class="btn btn--secondary">Ver agente funcionando</a>
       </div>
 
       <div class="how-card">
-        <div class="how-card__number">2</div>
-        <h3 class="how-card__title">Implantação</h3>
-        <p class="how-card__text">Instalamos a camada de automação e conectamos seus canais.</p>
-        <a href="weblab.html" class="btn btn--secondary">Site pronto para captar</a>
+        <div class="how-card__number">2</div><br>
+        <h3 class="how-card__title">Processos no automático</h3>
+        <p class="how-card__text">Tarefas repetitivas deixam de depender de pessoas.</p>
+        <a href="aistudio.html" class="btn btn--secondary">Ver como funciona</a>
       </div>
 
       <div class="how-card">
-        <div class="how-card__number">3</div>
-        <h3 class="how-card__title">Otimização contínua</h3>
-        <p class="how-card__text">Melhoria com base em métricas, não em opinião.</p>
-        <a href="aistudio.html" class="btn btn--secondary">Ver IA em ação</a>
+        <div class="how-card__number">3</div><br>
+        <h3 class="how-card__title">Crescimento previsível</h3>
+        <p class="how-card__text">Você sabe de onde vem os leads, e para onde vão.</p>
+        <a href="https://wa.me/5511959029428?text=Vim%20pelo%20site%20e%20quero%20automatizar%20um%20processo%20do%20meu%20neg%C3%B3cio!
+" class="btn btn--secondary">Quero isso!</a>
       </div>
     </div>
   </div>
@@ -348,10 +328,10 @@
     <!-- SERVIÇOS -->
     <section class="services" id="servicos">
       <div class="container">
-        <div class="section__header">
+        <div class="section__header"><br>
           <h2 class="section__title">Camadas de Inteligência</h2>
           <p class="section__subtitle">
-            Este demo é o destaque — mas o ecossistema completo conecta site, tráfego, automação e experiências interativas para acelerar o funil.
+            Nossos agente de IA são os destaques do momento, mas somos o ecossistema completo conecta site, tráfego, automação e experiências interativas para acelerar o funil.
           </p>
         </div>
 
@@ -362,7 +342,7 @@
               <h3 class="service-card__title">WebLab</h3>
               <p class="service-card__tagline">Sites inteligentes que captam leads e dados</p>
               <p class="service-card__description">Páginas modernas entregues em até 10 dias, prontas para conectar ao agente.</p>
-              <a href="weblab.html" class="btn btn--secondary">Criar meu site inteligente</a>
+              <a href="weblab.html" class="btn btn--secondary">Conheça o WebLab</a>
             </div>
           </div>
 
@@ -392,7 +372,7 @@
               <h3 class="service-card__title">AI Studio</h3>
               <p class="service-card__tagline">Agentes de IA personalizados para empresas</p>
               <p class="service-card__description">Atendimento, agendamento e follow-up integrados ao WhatsApp e CRM.</p>
-              <a href="aistudio.html" class="btn btn--secondary">Ativar agente inteligente</a>
+              <a href="aistudio.html" class="btn btn--secondary">Conheça o AI Studio</a>
             </div>
           </div>
 
@@ -402,53 +382,14 @@
               <h3 class="service-card__title">PlayLab</h3>
               <p class="service-card__tagline">Experiências que geram engajamento real</p>
               <p class="service-card__description">Ativações e jogos que capturam leads e alimentam seu funil automaticamente.</p>
-              <a href="playlab.html" class="btn btn--secondary">Ver demonstração</a>
+              <a href="playlab.html" class="btn btn--secondary">Conheça mais sobre o PLayLab</a>
             </div>
           </div>
-        </div>
+        </div><br><br>
       </div>
+      
     </section>
-<!-- ⬇️ COLAR ESTE BLOCO LOGO APÓS a grade .services__grid (seção de serviços/cards atuais) -->
-<section class="value-cards" id="o-que-voce-recebe">
-  <div class="container">
-    <div class="section__header">
-      <h2 class="section__title">O que você recebe na prática</h2>
-      <p class="section__subtitle">Entregáveis claros. Nada nebuloso.</p>
-    </div>
 
-    <div class="value-cards__grid">
-      <div class="value-card">
-        <span class="value-card__tick">✔</span>
-        <h3 class="value-card__title">Painel em tempo real</h3>
-        <p class="value-card__text">Agendamentos, conversas e resultados num só lugar.</p>
-      </div>
-
-      <div class="value-card">
-        <span class="value-card__tick">✔</span>
-        <h3 class="value-card__title">Integrações essenciais</h3>
-        <p class="value-card__text">WhatsApp, CRM, planilhas e sistemas que já usa.</p>
-      </div>
-
-      <div class="value-card">
-        <span class="value-card__tick">✔</span>
-        <h3 class="value-card__title">Relatórios executivos</h3>
-        <p class="value-card__text">Prioridades semanais e próximos passos sem ruído.</p>
-      </div>
-
-      <div class="value-card">
-        <span class="value-card__tick">✔</span>
-        <h3 class="value-card__title">Playbooks de automação</h3>
-        <p class="value-card__text">Fluxos prontos para atendimento, agendamento e follow-up.</p>
-      </div>
-
-      <div class="value-card">
-        <span class="value-card__tick">✔</span>
-        <h3 class="value-card__title">Suporte de implantação</h3>
-        <p class="value-card__text">Acompanhamento até rodar liso no seu ambiente.</p>
-      </div>
-    </div>
-  </div>
-</section>
 
 <!-- ⬇️ COLAR ESTE BLOCO ANTES da seção "cases" -->
 <section class="fit-section" id="pra-quem-e">
@@ -513,63 +454,63 @@
 <section class="plans" id="planos">
   <div class="container">
     <div class="section__header">
-      <h2 class="section__title">Níveis de suporte</h2>
-      <p class="section__subtitle">Escolha o ponto de partida. Cresce junto com você.</p>
+      <h2 class="section__title">Onde seu negócio está agora?</h2>
+      <p class="section__subtitle">Escolha o ponto de partida que faz sentido para o seu momento. Cresça no seu ritmo.</p>
     </div>
 
     <div class="plans__grid">
       <!-- Starter -->
       <div class="plan-card">
         <div class="plan-card__head">
-          <h3 class="plan-card__name">Starter</h3>
-          <p class="plan-card__tagline">Base para captar e organizar</p>
+          <h3 class="plan-card__name">Começando</h3>
+          <p class="plan-card__tagline">Base para captar e organizar:</p>
         </div>
         <ul class="plan-card__bullets">
           <li>Site inteligente (WebLab)</li>
-          <li>Coleta de leads e dados</li>
-          <li>Integração WhatsApp básica</li>
+          <li>Formulários e captura de leads</li>
+          <li>WhatsApp com IA para atendimento</li>
         </ul>
         <div class="plan-card__cta">
-          <a href="weblab.html" class="btn btn--secondary">Criar meu site</a>
+          <a href="https://wa.me/5511959029428?text=Ol%C3%A1%2C%20vim%20pelo%20site.%20Estou%20come%C3%A7ando%20e%20quero%20criar%20meu%20site%20inteligente%20(WebLab)%2C%20com%20captura%20de%20leads%20e%20WhatsApp%20integrado." class="btn btn--secondary">Criar meu site</a>
         </div>
       </div>
 
       <!-- Pro -->
       <div class="plan-card plan-card--featured">
         <div class="plan-card__head">
-          <h3 class="plan-card__name">Pro</h3>
-          <p class="plan-card__tagline">Automação que gera resultado</p>
+          <h3 class="plan-card__name">Crescendo</h3>
+          <p class="plan-card__tagline">Automação que responde e agenda para você</p>
         </div>
         <ul class="plan-card__bullets">
-          <li>Agente de IA para atendimento e agendamento</li>
-          <li>Painel em tempo real + relatórios</li>
-          <li>Integrações com CRM/planilhas</li>
+          <li>Agente de IA para atendimento</li>
+          <li>Agendamentos automáticos</li>
+          <li>Painel CRM + relatórios</li>
         </ul>
         <div class="plan-card__cta">
-          <a href="aistudio.html" class="btn btn--accent btn--large">Escolher este</a>
+          <a href="https://wa.me/5511959029428?text=Ol%C3%A1%2C%20vim%20pelo%20site.%20Estou%20crescendo%20minha%20empresa%20e%20quero%20ativar%20um%20agente%20de%20IA%20para%20atendimento%2C%20agendamentos%20autom%C3%A1ticos%20e%20painel%20CRM%20%2B%20relat%C3%B3rios." class="btn btn--accent btn--large">Quero um agente</a>
         </div>
       </div>
 
       <!-- Scale -->
       <div class="plan-card">
         <div class="plan-card__head">
-          <h3 class="plan-card__name">Scale</h3>
-          <p class="plan-card__tagline">Operação previsível end-to-end</p>
+          <h3 class="plan-card__name">Escalando</h3>
+          <p class="plan-card__tagline">Operação previsível e enxuta</p>
         </div>
         <ul class="plan-card__bullets">
-          <li>IA + consultoria operacional (Cobra)</li>
-          <li>Backlog priorizado (90 dias)</li>
-          <li>Rotinas e playbooks sob medida</li>
+          <li>Automação de processos do começo ao fim</li>
+          <li>Rotinas e integrações sob medida</li>
+          <li>Suporte consultivo contínuo</li>
         </ul>
         <div class="plan-card__cta">
-          <a href="aistudio.html#contato" class="btn btn--secondary">Falar com especialista</a>
+          <a href="https://wa.me/5511959029428?text=Ol%C3%A1%2C%20vim%20pelo%20site.%20Estou%20escalando%20minha%20operação%20e%20quero%20automatizar%20processos%20end-to-end%20com%20suporte%20consultivo%20cont%C3%ADnuo." class="btn btn--secondary">Falar com especialista</a>
         </div>
       </div>
     </div>
 
     <div class="plans__foot-cta">
-      <a href="#diagnostico" class="btn btn--primary btn--large">Fazer diagnóstico em 60s</a>
-      <a href="aistudio.html" class="btn btn--outline btn--large">Ver detalhes do AI Studio</a>
+      
+      <a href="https://wa.me/5511959029428?text=Olá%2C%20vim%20pelo%20site%20mas%20ainda%20tenho%20dúvidas." class="btn btn--outline btn--large">Ainda tenho dúvidas!</a>
     </div>
   </div>
 </section>
@@ -578,7 +519,7 @@
       <div class="cta-final__bg"></div>
       <div class="container">
         <div class="cta-final__content">
-          <h2 class="cta-final__title">Pronto para automatizar seu atendimento e aumentar suas vendas</h2>
+          <h2 class="cta-final__title">Pronto para automatizar seu atendimento e aumentar suas vendas?</h2>
           <p class="cta-final__subtitle">Em até 7 dias sua empresa pode ter um sistema inteligente operando dentro do WhatsApp, agendando e respondendo sem erro.</p>
           <div class="cta-final__actions">
             <a href="https://wa.me/5511959029428?text=Ol%C3%A1!%20Quero%20automatizar%20meu%20atendimento%20com%20a%20Tullu%20Motion." class="btn btn--primary btn--large" target="_blank">Ativar agente agora</a>
