--- a/aistudio.html
+++ b/aistudio.html
@@ -93,7 +93,29 @@
                 </div>
             </div>
         </section>
+  <!-- SHOWCASE — PRINT DO PAINEL / WHITE LABEL -->
+    <section id="showcase" class="showcase">
+      <div class="container">
+        <header class="section__header">
+          <h2 class="section__title">A solução de atendimento mais vendida:</h2>
+          <p class="section__subtitle">
+            Visualize agendamentos, conversas, status e resultados em um só lugar. Sem atrito, sem planilhas soltas.
+          </p> <br>
+          <div class="tag tag--ai">Custa<strong>menos</strong>que um jovem aprendiz!</div>
+        </header>
 
+        <figure class="showcase__frame">
+          <!-- troque a imagem abaixo pelo print do seu White Label -->
+          <img src="assets/img/print-whitelabel.png" alt="Print do painel de CRM e agente em funcionamento" class="showcase__img"/>
+          <figcaption class="sr-only">Exemplo do painel com agendamentos e conversas integradas ao WhatsApp</figcaption>
+        </figure>
+
+        <div class="showcase__cta">
+          <a href="#diagnostico" class="btn btn--accent btn--large">Quero testar gratuitamente</a>
+          <small class="demo__note">Atende até<strong>3.000 leads simultaneamente</strong></small>
+        </div>
+      </div>
+    </section>
         <!-- Features Section -->
         <section class="features" id="features">
             <div class="container">
@@ -155,7 +177,47 @@
                 </div>
             </div>
         </section>
+<!-- ⬇️ COLAR ESTE BLOCO LOGO APÓS a grade .services__grid (seção de serviços/cards atuais) -->
+<section class="value-cards" id="o-que-voce-recebe">
+  <div class="container">
+    <div class="section__header">
+      <h2 class="section__title">O que você recebe na prática</h2>
+      <p class="section__subtitle">Entregáveis claros. Nada nebuloso.</p>
+    </div>
 
+    <div class="value-cards__grid">
+      <div class="value-card">
+        <span class="value-card__tick">✔</span>
+        <h3 class="value-card__title">Painel em tempo real</h3>
+        <p class="value-card__text">Agendamentos, conversas e resultados num só lugar.</p>
+      </div>
+
+      <div class="value-card">
+        <span class="value-card__tick">✔</span>
+        <h3 class="value-card__title">Integrações essenciais</h3>
+        <p class="value-card__text">WhatsApp, CRM, planilhas e sistemas que já usa.</p>
+      </div>
+
+      <div class="value-card">
+        <span class="value-card__tick">✔</span>
+        <h3 class="value-card__title">Relatórios executivos</h3>
+        <p class="value-card__text">Prioridades semanais e próximos passos sem ruído.</p>
+      </div>
+
+      <div class="value-card">
+        <span class="value-card__tick">✔</span>
+        <h3 class="value-card__title">Playbooks de automação</h3>
+        <p class="value-card__text">Fluxos prontos para atendimento, agendamento e follow-up.</p>
+      </div>
+
+      <div class="value-card">
+        <span class="value-card__tick">✔</span>
+        <h3 class="value-card__title">Suporte de implantação</h3>
+        <p class="value-card__text">Acompanhamento até rodar liso no seu ambiente.</p>
+      </div>
+    </div>
+  </div>
+</section>
         <!-- Process Section -->
         <section class="process process--branch" id="como-funciona">
             <div class="container">
