--- a/aistudio.html
+++ b/aistudio.html
@@ -169,7 +169,162 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </<!-- === AGENTS (colocar antes da seção #o-que-voce-recebe) === -->
+<section class="agents" id="agentes">
+  <div class="container">
+    <!-- H1 com classe do hero para herdar o estilo -->
+    <header class="section__header">
+      <h1 class="hero__title">Escolha seu <span class="gradient-text">Agente de IA</span></h1>
+      <p class="hero__subtitle">Consultores digitais prontos para operar no WhatsApp — cada um com foco setorial e protocolo próprio.</p>
+    </header>
+
+    <div class="agents__grid">
+      <!-- HYAT -->
+      <article class="agent-card">
+        <div class="agent-card__avatar-wrapper">
+          <img src="assets/img/hyat.png" alt="Hyat — agente de IA para imobiliárias e advocacias" class="agent-card__avatar">
+        </div>
+        <div class="agent-card__body">
+          <h3 class="agent-card__title"><strong>Hyat</strong></h3>
+          <p class="agent-card__desc">
+            Estrategista para <strong>imobiliárias</strong> e <strong>advocacias</strong>. Memória longa, leitura e retenção de contexto acima da média.
+          </p>
+          <ul class="agent-card__bullets">
+            <li>Memória estendida de leads e casos</li>
+            <li>Pré-qualificação consultiva</li>
+            <li>Follow-ups juridicamente corretos</li>
+          </ul>
+        </div>
+        <div class="agent-card__footer">
+          <a class="btn btn--primary" target="_blank"
+             href="https://wa.me/5511959029428?text=Quero%20conhecer%20o%20agente%20Hyat%20para%20meu%20neg%C3%B3cio.">
+            Conhecer mais sobre Hyat
+          </a>
+        </div>
+      </article>
+
+      <!-- NOVA -->
+      <article class="agent-card">
+        <div class="agent-card__avatar-wrapper">
+          <img src="assets/img/nova.png" alt="Nova — agente de IA para clínicas e recepção" class="agent-card__avatar">
+        </div>
+        <div class="agent-card__body">
+          <h3 class="agent-card__title"><strong>Nova</strong></h3>
+          <p class="agent-card__desc">
+            Focada em <strong>clínicas</strong> (odontologia, estética, saúde). Educada, ágil e precisa no <strong>agendamento</strong>.
+          </p>
+          <ul class="agent-card__bullets">
+            <li>Confirmação + lembretes automáticos</li>
+            <li>Fila inteligente por prioridade</li>
+            <li>Recepção com linguagem humanizada</li>
+          </ul>
+        </div>
+        <div class="agent-card__footer">
+          <a class="btn btn--primary" target="_blank"
+             href="https://wa.me/5511959029428?text=Quero%20conhecer%20a%20agente%20Nova%20para%20minha%20cl%C3%ADnica.">
+            Conhecer mais sobre Nova
+          </a>
+        </div>
+      </article>
+
+      <!-- STEVE -->
+      <article class="agent-card">
+        <div class="agent-card__avatar-wrapper">
+          <img src="assets/img/steve.png" alt="Steve — agente de IA para venda de carros e concessionárias" class="agent-card__avatar">
+        </div>
+        <div class="agent-card__body">
+          <h3 class="agent-card__title"><strong>Steve</strong></h3>
+          <p class="agent-card__desc">
+            Especialista em <strong>concessionárias</strong> e vendedores de <strong>veículos</strong>. Conduz o lead até o test-drive.
+          </p>
+          <ul class="agent-card__bullets">
+            <li>Qualificação por perfil e orçamento</li>
+            <li>Envio de ficha técnica e propostas</li>
+            <li>Agendamento de test-drive</li>
+          </ul>
+        </div>
+        <div class="agent-card__footer">
+          <a class="btn btn--primary" target="_blank"
+             href="https://wa.me/5511959029428?text=Quero%20o%20agente%20Steve%20para%20minhas%20vendas%20de%20carros.">
+            Conhecer mais sobre Steve
+          </a>
+        </div>
+      </article>
+
+      <!-- RYEN -->
+      <article class="agent-card">
+        <div class="agent-card__avatar-wrapper">
+          <img src="assets/img/ryen.png" alt="Ryen — agente de IA para tech e soluções personalizadas" class="agent-card__avatar">
+        </div>
+        <div class="agent-card__body">
+          <h3 class="agent-card__title"><strong>Ryen</strong></h3>
+          <p class="agent-card__desc">
+            Ultra ágil para <strong>tecnologia</strong> e empresas de <strong>solução sob medida</strong>. Conversa clara e converte rápido.
+          </p>
+          <ul class="agent-card__bullets">
+            <li>Discovery e qualificação técnica</li>
+            <li>Captação de requisitos</li>
+            <li>Next steps objetivos</li>
+          </ul>
+        </div>
+        <div class="agent-card__footer">
+          <a class="btn btn--primary" target="_blank"
+             href="https://wa.me/5511959029428?text=Quero%20conhecer%20o%20agente%20Ryen%20para%20minha%20empresa%20de%20tecnologia.">
+            Conhecer mais sobre Ryen
+          </a>
+        </div>
+      </article>
+
+      <!-- KAEL -->
+      <article class="agent-card">
+        <div class="agent-card__avatar-wrapper">
+          <img src="assets/img/kael.png" alt="Kael — agente de IA para academias, crossfit e nutrição" class="agent-card__avatar">
+        </div>
+        <div class="agent-card__body">
+          <h3 class="agent-card__title"><strong>Kael</strong></h3>
+          <p class="agent-card__desc">
+            Direto ao ponto para <strong>academias</strong>, <strong>crossfit</strong> e <strong>nutricionistas</strong>. Energia e consistência.
+          </p>
+          <ul class="agent-card__bullets">
+            <li>Triagem de planos e horários</li>
+            <li>Prova social e ofertas pontuais</li>
+            <li>Reengajamento de ex-alunos</li>
+          </ul>
+        </div>
+        <div class="agent-card__footer">
+          <a class="btn btn--primary" target="_blank"
+             href="https://wa.me/5511959029428?text=Quero%20conhecer%20o%20agente%20Kael%20para%20minha%20academia.">
+            Conhecer mais sobre Kael
+          </a>
+        </div>
+      </article>
+
+      <!-- ARION -->
+      <article class="agent-card">
+        <div class="agent-card__avatar-wrapper">
+          <img src="assets/img/arion.png" alt="Arion — agente de IA generalista avançado" class="agent-card__avatar">
+        </div>
+        <div class="agent-card__body">
+          <h3 class="agent-card__title"><strong>Arion</strong></h3>
+          <p class="agent-card__desc">
+            <strong>Generalista premium</strong>, adaptável a qualquer nicho. Integra <strong>automações avançadas</strong> (entregues pela Tullu via parceiros).
+          </p>
+          <ul class="agent-card__bullets">
+            <li>Orquestração multi-ferramentas</li>
+            <li>Workflows sob medida</li>
+            <li>Escala e governança de dados</li>
+          </ul>
+        </div>
+        <div class="agent-card__footer">
+          <a class="btn btn--primary" target="_blank"
+             href="https://wa.me/5511959029428?text=Quero%20o%20agente%20Arion%20com%20automa%C3%A7%C3%B5es%20avançadas.">
+            Conhecer mais sobre Arion
+          </a>
+        </div>
+      </article>
+    </div>
+  </div>
+</section>
 <!-- ⬇️ COLAR ESTE BLOCO LOGO APÓS a grade .services__grid (seção de serviços/cards atuais) -->
 <section class="value-cards" id="o-que-voce-recebe">
   <div class="container">
